# calculadora

meuprojeto/: CMakeLists.txt
meuprojeto/include/: calc.h
meuprojeto/src/: calc.cpp  teste.cpp
